# webrtc

./: .gitignore  README.md  README_en.md  README_fr.md  README_ja.md  README_ko.md  README_ru.md  README_zh.md  README_zh_tw.md
.doc/宣传文章/: README.md  process_docx.py
.doc/宣传文章/doc/: 项目宣传2_公众号版_优化版.docx
.doc/部署文档/: 平台部署文档.md  平台部署文档_fr.md  平台部署文档_ja.md  平台部署文档_ko.md  平台部署文档_ru.md  平台部署文档_zh.md  平台部署文档_zh_tw.md
.scripts/docker/: POSTGRESQL_FIX.md  docker-compose.yml  fix_postgresql.sh  init-tdengine.sh  install_all.sh  install_linux.sh  install_linux_arm.sh  install_linux_snap.sh  install_mac.sh  install_middleware.sh  install_middleware_linux.sh  install_middleware_linux_snap.sh  install_middleware_mac.sh  srs-entrypoint.sh  tdengine-entrypoint.sh  test_postgresql_connection.sh
.scripts/postgresql/: iot-ai10.sql  iot-device10.sql  iot-gb2818110.sql  iot-message10.sql  iot-video10.sql
.scripts/srs/: RTSP_PUSH_TROUBLESHOOTING.md  diagnose_rtsp_push.ps1  push_rtsp_to_srs.ps1  push_rtsp_to_srs.sh  push_video_to_srs.ps1  push_video_to_srs.sh
.scripts/srs/conf/: docker.conf
AI/: .env  .env.docker  Dockerfile  db_models.py  diagnose_minio.py  docker-compose.yaml  drop_all_tables.py  install.sh  install_linux.sh  install_linux_kylin.sh  install_mac.sh  requirements.txt  run.py  test_service.py
AI/app/blueprints/: deploy.py  export.py  inference.py  inference_task.py  llm.py  model.py  train.py
AI/app/services/: deploy_daemon.py  deploy_service.py  inference_service.py  minio_service.py  ocr_service.py  speech_service.py
AI/app/utils/: onnx_validator.py
AI/services/: Dockerfile  run_deploy.py
DEVICE/: Dockerfile.base  README.md  README_en.md  docker-compose.yml  drop_import_tables.py  drop_import_tables.sh  install.sh  install_linux.sh  install_mac.sh  pom.xml
DEVICE/iot-dataset/iot-dataset-biz/: Dockerfile  pom.xml
DEVICE/iot-device/iot-device-biz/: Dockerfile  pom.xml
DEVICE/iot-file/iot-file-biz/: Dockerfile
DEVICE/iot-gateway/: Dockerfile
DEVICE/iot-gb28181/: pom.xml
DEVICE/iot-gb28181/iot-gb28181-api/: pom.xml
DEVICE/iot-gb28181/iot-gb28181-biz/: pom.xml
DEVICE/iot-infra/iot-infra-biz/: Dockerfile
DEVICE/iot-message/iot-message-biz/: Dockerfile
DEVICE/iot-parent/: pom.xml
DEVICE/iot-sink/iot-sink-api/: pom.xml
DEVICE/iot-sink/iot-sink-biz/: pom.xml
DEVICE/iot-system/iot-system-biz/: Dockerfile  TEST_REPORT.md  check-build.sh  test-build.sh
DEVICE/iot-tdengine/iot-tdengine-biz/: Dockerfile
TASK/: CMakeLists.txt
TASK/src/: Manage.h
VIDEO/: .env  .env.docker  .env.prod  Dockerfile  Dockerfile.arm  docker-compose.yaml  drop_all_tables.py  env.example  install.sh  install_linux.sh  install_linux_arm.sh  install_mac.sh  models.py  requirements.txt  run.py  test_services_pipeline.py  test_services_pipeline_README.md  test_services_pipeline_tracking.py  test_services_pipeline_tracking_README.md  test_video.py
VIDEO/app/blueprints/: alert.py  algorithm_task.py  camera.py  record.py  snap.py
VIDEO/app/services/: alert_consumer_service.py  alert_hook_service.py  alert_service.py  algorithm_service.py  algorithm_task_daemon.py  algorithm_task_launcher_service.py  algorithm_task_service.py  auto_frame_extraction_service.py  camera_service.py  notification_service.py  pusher_service.py  record_space_service.py  record_video_service.py  snap_image_service.py  snap_space_service.py  snap_task_service.py
VIDEO/services/frame_extractor_service/: Dockerfile
VIDEO/services/pusher_service/: Dockerfile
WEB/: .dockerignore  Dockerfile  docker-compose.yaml  install_linux.sh
WEB/conf/: nginx.conf
(+236 files in other folders)
